--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>Mathieu j'te baise.</p>
+<h1>hello sup?</h1>
+<p>that's my amazing portfolio.</p>
 </body>
 </html>
