--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <title>Paul Poinet</title>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
+    <h1>Paul is cool</h1>
 
-    <p>At Mozilla, we’re a global community of</p>
+    <p>Dis iz Paul's portfolio. Paul is:</p>
     
     <ul> <!-- changed to list in the tutorial -->
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
+      <li>technologiccc/li>
+      <li>thinccccers</li>
+      <li>builders of buildingsss</li>
+      <li>developperrr of workcccflo</li>
     </ul>
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+    <p>Yeah mate.</p>
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <p>This is my  <a href="https://www.linkedin.com/in/ppoinet/">LinkedIn</a>, Hire me plz.</p>
   </body>
 </html>
