--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Dis iz Paul's portfolio. Paul is:</p>
     
     <ul> <!-- changed to list in the tutorial -->
-      <li>technologiccc/li>
+      <li>technologiccc</li>
       <li>thinccccers</li>
       <li>builders of buildingsss</li>
       <li>developperrr of workcccflo</li>
