--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Dis iz Paul's portfolio. Paul is:</p>
     
     <ul> <!-- changed to list in the tutorial -->
+      <li>thiccc</li>
       <li>technologiccc</li>
       <li>thinccccers</li>
       <li>builders of buildingsss</li>
