--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Paul Poinet</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
+    <style>
+      body {
+        font-family: 'Tangerine', serif;
+        font-size: 48px;
+      }
+    </style>
+
   </head>
   <body>
     <h1>Paul is cool</h1>
