--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
     <p>Yeah mate.</p>
 
     <p>This is my  <a href="https://www.linkedin.com/in/ppoinet/">LinkedIn</a>, Hire me plz.</p>
+    
+    <div>Making the Web Beautiful!</div>
+
   </body>
 </html>
