--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Paul Poinet</title>
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Tangerine">
+          href="https://fonts.googleapis.com/css?family=Lato">
     <style>
       body {
-        font-family: 'Tangerine', serif;
+        font-family: 'Lato', normal;
         font-size: 48px;
       }
     </style>
