--- a/contact.html
+++ b/contact.html
@@ -108,11 +108,11 @@
             <br>
           </p>
           <p>
-            <abbr title="Phone">P</abbr>: (123) 456-7890
+            <abbr title="Phone">P</abbr>: +45 4170 1634
           </p>
           <p>
             <abbr title="Email">E</abbr>:
-            <a href="mailto:name@example.com">name@example.com
+            <a href="mailto:name@example.com">poinetp@gmail.com
             </a>
           </p>
           <p>
