--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                 <p class="lead">An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
                 <div class="row">
                   <div class="col-lg-8">
-                    <p>Received overcame oh sensible so at an. Formed do change merely to county it. <strong>Am separate contempt</strong> domestic to to oh. On relation my so addition branched. Put hearing cottage she norland letters equally prepare too. Replied exposed savings he no viewing as up. Soon body add him hill. No father living really people estate if. Mistake do produce beloved demesne if am pursuit.</p>
+                    <p>Paul Poinet is an architectural designer and graduate from the University of Stuttgart where he obtained a M.Sc. in Integrative Technologies and Architectural Design Research. During his studies, he participated in the design development and construction of the ICD/ITKE Research Pavilion 2014-15. Paul is currently a Ph.D. Fellow at the Centre for Information Technology and Architecture (CITA) and part of the InnoChain European Training Network, collaborating with Design-To-Production and Buro Happold. His research focuses on Multi-Scalar Modelling techniques for the design large-scale and free-form architectural projects.</p>
                     <div class="skill-item">
                       <div class="progress-title">PHP</div>
                       <div class="progress">
@@ -99,7 +99,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <p><img src="img/about.jpg" alt="This is me" class="image rounded-circle img-fluid"></p>
+                    <p><img src="img/about.png" alt="This is me" class="image rounded-circle img-fluid"></p>
                   </div>
                 </div>
                 <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
