--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Creative - Bootstrap Portfolio Theme by Bootstrapious.com</title>
+  <title>Paul Poinet</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
@@ -34,9 +34,9 @@
         <!--   *** SIDEBAR ***-->
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
-            <h1 class="sidebar-heading"> <a href="index.html">Creative</a></h1>
-            <p class="sidebar-p">I am a creative illustrator and graphic designer with more than 10 years of experience. </p>
-            <p class="sidebar-p">Originally from Toronto, currently based in London. </p>
+            <h1 class="sidebar-heading"> <a href="index.html">Computational Design Specialist</a></h1>
+            <p class="sidebar-p">I am a trained architect with a strong focus on computational design and custom workflows for AEC. </p>
+            <p class="sidebar-p">Originally from Paris, currently based in Copenhagen. </p>
             <ul class="sidebar-menu">
                 <!-- Link-->
                 <li class="sidebar-item"><a href="index.html" class="sidebar-link">Home</a></li>
