--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--   *** SIDEBAR ***-->
         <div id="sidebar" class="col-md-4 col-lg-3 sidebar-offcanvas">
           <div class="sidebar-content">
-            <h1 class="sidebar-heading"> <a href="index.html">Creative</a></h1>
+            <h1 class="sidebar-heading"> <a href="index.html">Computational Design Specialist</a></h1>
             <p class="sidebar-p">I am a trained architect with a strong focus on computational design and custom workflows for AEC. </p>
             <p class="sidebar-p">Originally from Paris, currently based in Copenhagen. </p>
             <ul class="sidebar-menu">
