--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <!-- Link-->
                 <li class="sidebar-item"><a href="contact.html" class="sidebar-link">Get in touch</a></li>
             </ul>
-            <p class="social"><a href="#" data-animate-hover="pulse" class="external facebook"><i class="fa fa-facebook"></i></a><a href="#" data-animate-hover="pulse" class="external gplus"><i class="fa fa-google-plus"></i></a><a href="#" data-animate-hover="pulse" class="external twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="external instagram"><i class="fa fa-instagram"></i></a><a href="#" data-animate-hover="pulse" class="email"><i class="fa fa-envelope"></i></a></p>
+            <p class="social"><a href="#" data-animate-hover="pulse" class="external facebook"><i class="fa fa-linkedin"></i></a><a href="https://www.linkedin.com/in/ppoinet/" data-animate-hover="pulse" class="external gplus"><i class="fa fa-google-plus"></i></a><a href="#" data-animate-hover="pulse" class="external twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="external instagram"><i class="fa fa-instagram"></i></a><a href="#" data-animate-hover="pulse" class="email"><i class="fa fa-envelope"></i></a></p>
             <div class="copyright text-center text-md-left">
               <p class="credit">&copy;2018 Paul Poinet</a></p>
               <!-- Please do not remove the backlink to us, unless you support the development at http://bootstrapious.com/donate. It is part of the license conditions. Thanks for understanding :)        -->
